# near-nft-marketplace

./: .gitignore  package-lock.json  package.json
frontend/: .gitignore  App.css  App.js  Close.js  Modal.js  config.js  index.js  package-lock.json  start.sh
market_contract/: Cargo.toml  deploy.sh
market_contract/res/: market_contract.wasm
market_contract/src/: lib.rs  tests.rs
nft-contract/: Cargo.toml  README.md
nft-contract/neardev/: dev-account  dev-account.env
nft-contract/res/: nft_contract.wasm
nft-contract/src/: approval.rs
